<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

        <item
            android:id="@+id/filter"
            android:orderInCategory="1"
            android:title="Logout"
            app:showAsAction="always"
            android:icon="@drawable/ic_tune_24px"
            />

</menu>